# Slip

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .meson.build.swp  Ast.cpp  Ast.h  Ast.inc  Backend.cpp  Backend.h  Directory.Build.props  Io.cpp  Io.h  Lex.cpp  Lex.h  Parse.cpp  Parse.h  Pch.cpp  Pch.h  README.md  Reflect.cpp  Reflect.h  Sema.cpp  Sema.h  Slip.cpp  Slip.h  Slip7.cpp  Source.cpp  Source.h  Type.cpp  Type.h  Util.cpp  Util.h  meson.build  slip.natvis  slip.sln  slip.vcxproj  slip_1.py  slip_2.py  slip_2.slip  (+12 more)
bench/: ack.slip  ackermann.slip  ary.slip  fibo.slip  harmonic.slip  heapsort.slip  hello.slip  meson.build  moments.slip  nbody.slip  nestedloop.slip  nsieve.slip
bench/util/: main.cpp
errs/: meson.build  parse_err_01.slip  syntax_01.slip  syntax_02.slip  try_err_01.slip  try_expr_01.slip
examples/slipcc/: meson.build  slipcc.cpp  slipcc.vcxproj  slipcc.vcxproj.filters
libs/slip/: Ast.cpp  Ast.h  Ast.inc  Backend.cpp  Errors.h  Errors.inc  Eval.cpp  Func.h  Io.cpp  Io.h  Lex.cpp  Parse.cpp  Reflect.cpp  Reflect.h  Sema.cpp  Slip.cpp  Slip.h  TODO.txt  Util.cpp  Util.h  meson.build  slip.vcxproj  slip.vcxproj.filters
libs/slip/pch/: Pch.cpp  Pch.h
local/test/: Makefile
pch/: Pch.cpp  Pch.h
slip/: Pch.h  Slip6.cpp  slip.natvis  slip.vcxproj  slip.vcxproj.filters  test.py
slip/bench/: ack.slip  ary.slip  fibo.slip  harmonic.slip  moments.slip  nestedloop.slip  nsieve.slip
slip7/: .editorconfig  Ast.cpp  Ast.h  Lex.cpp  Lex.h  Lexer.cpp  Lexer.h  Parse.h  Pch.cpp  Pch.h  Reflect.cpp  Reflect.h  Slip7.cpp  SourceManager.h  Syntax.cpp  Syntax.h  slip.natvis  slip.vcxproj  slip.vcxproj.filters  test.py
slip7/bench/: ary.slip  harmonic.slip
src/: Ast.cpp  Ast.h  Ast.inc  Backend.cpp  Errors.h  Errors.inc  Eval.cpp  Func.h  Io.cpp  Io.h  Lex.cpp  Lex.h  Parse.cpp  Reflect.cpp  Reflect.h  Sema.cpp  Slip.cpp  Slip.h  Util.cpp  Util.h  meson.build  slip.vcxproj  slip.vcxproj.filters
src/pch/: Pch.h
test/: array_type_01.slip  array_type_02.slip  cond_expr_01.slip  coro_expr_01.slip  function_overload_01.slip  intrinsic_01.slip  let_expr_01.slip  loop_expr_01.slip  macro_expr_01.slip  macro_expr_02.slip  macro_expr_03.slip  meson.build  now_expr_01.slip  now_expr_02.slip  recursive_01.slip  sliptest.cpp  sliptest.vcxproj  sliptest.vcxproj.filters  string_type_01.slip  struct_type_02.slip  struct_type_04.slip  try_expr_01.slip  try_expr_02.slip  type_infer_00.slip  type_infer_01.slip  type_infer_02.slip  type_infer_03.slip  var_expr_01.slip
test/errors/: meson.build  overload_01.slip  parse_cond_01.slip  syntax_01.slip  syntax_02.slip  tests.inc  try_err_01.slip
test/feature/: array_type_02.slip  attr_expr_01.slip  fmt_expr_01.slip  macro_expr_01.slip  macro_expr_02.slip  meson.build  module_01.slip  now_expr_01.slip  string_type_01.slip  struct_type_01.slip  struct_type_03.slip  struct_type_04.slip  tests.inc  try_expr_01.slip  type_infer_02.slip  type_infer_03.slip  var_expr_01.slip
test/util/: main.cpp
tools/: meson-init  rebuild-on-change  run-clang-format.py  test1
