
libslip = library('slip',
    'Ast.cpp',
    'Backend.cpp',
    'Eval.cpp',
    'Io.cpp',
    'Lex.cpp',
    'Parse.cpp',
    'Reflect.cpp',
    'Sema.cpp',
    'Slip.cpp',
    'Util.cpp',
    include_directories: '..',
    cpp_args:[
        '-Wno-invalid-offsetof',
        '-Wno-unused-local-typedefs',
        '-Wno-pragma-once-outside-header'],
)

